# nups2

./: .gitignore  LICENSE.txt  README.md  diff_manifests.nu  extract_all.nu  generate_manifests.nu  generate_map.nu  incremental_extract_all.nu  incremental_namelist.nu  scrape_all_for_namelist.nu
crates/nu_plugin_nups2/: Cargo.toml  README.md
crates/nu_plugin_nups2/src/: crc64.rs  lib.rs  main.rs  util.rs
crates/nu_plugin_nups2/src/pack2/: extract.rs  ls.rs  manifest_create.rs  manifest_diff.rs  mod.rs  scrape_filenames.rs
crates/nups2/: Cargo.toml  README.md
crates/nups2/src/: adr.rs  bin_utils.rs  cli.rs  crc32.rs  crc64.rs  dma.rs  dme.rs  error.rs  filename_extractor.rs  jenkins_hash.rs  json_utils.rs  lib.rs  main.rs  pack1.rs  pack2.rs  pack2_manifest.rs  rainbow_table.rs  to_glb.rs
crates/nups2/src/fsb5/: mod.rs  pcm.rs  sound_formats.rs
docs/file-formats/: README.md  dma.md  dme.md  pack1.md  pack2.md
src/: bin_utils.rs  cli_utils.rs  crc64.rs  filename_extractor.rs  jenkins_hash.rs  lib.rs  main.rs  pack2.rs  pack2_manifest.rs  rainbow_table.rs
