[package]
name = "nu_plugin_nups2"
version = "0.101.0"
edition = "2021"

[features]
default = ["pack2", "pack2_filename_scraper"]
pack2 = []
pack2_filename_scraper = ["pack2", "nups2/filename_scraper"]

[dependencies]
nu-plugin = "0.101.0"
nu-protocol = "0.101.0"

[dependencies.nups2]
path = "../nups2"
default-features = false
