[package]
name = "nups2"
version = "0.1.0"
edition = "2021"

[profile.dev]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[features]
default = ["json", "use_comfy_table", "filename_scraper", "manifests", "cli"]
all = ["default", "rainbow_table", "dma", "dme"]
debug_logs = []
adr = ["quick-xml", "serde/derive"]  # This was a mistake. also not finished
dma = []
dme = ["dma"]
filename_scraper = ["regex"]
json = []
manifests = []
rainbow_table = ["regex", "rayon"]
use_comfy_table = ["comfy-table"]
cli = ["clap"]
pack1 = []  # Incomplete (no extraction, re-encoding, etc) -> not included in "all"

# since this is 100% offline and works with trusted data i don't prioritise up-to-date dependencies
[dependencies]
clap = {version = "4.5.23", default-features = false, features = ["std", "env", "derive", "help", "usage"], optional = true}
comfy-table = {version = "7.1.3", default-features = false, optional = true}
flate2 = {version = "1.0.35", default-features = false, features = ["zlib"]}
quick-xml = {version = "0.37.1", default-features = false, features = ["serde-types"], optional = true}
rayon = {version = "1.10.0", default-features = false, optional = true}
regex = {version = "1.11.1", default-features = false, features = ["perf", "std", "unicode-case"], optional = true}
serde = {version = "1.0.215", default-features = false, features = ["std"], optional = true}
